# POC_Lab1_make-Cmake

./: README.md  description.txt  file.c
examples/: CMakeLists.txt  Makefile
my_string/: main.c
